# epa-bird-sound-classification

./: README.md  pyproject.toml
docs/: file-info.md
ebsc-aws-infrastructure/: .gitignore  Makefile  README.md  app.py  cdk.json  pyproject.toml
ebsc-aws-infrastructure/aws_buckets/: collab_s3_bucket.py
ebsc-docs/: README.md  aws_architecture.py  pyproject.toml
ebsc-sandbox/: Makefile  README.md  env-template.txt  pyproject.toml
ebsc-sandbox/notebooks/: explore-files-by-file-size.ipynb  map-out-s3-files.ipynb  setup-shared-data-with-cornell.ipynb  test-read-access.ipynb
ebsc-sandbox/src/: notebook_util.py
notebooks/: test-bird-access.ipynb
sandbox/: pyproject.toml
